Migrate project to Spring Boot 3.4.5 and fix bug caused by the migration